# marktplaats-monitor

./: .gitignore  Cargo.toml  README.md  config.toml  results.txt  wishlist.txt
src/: main.rs  web.rs
