[package]
name = "marktplaats-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
urlencoding = "2.1"
fastrand = "2"
notify-rust = "4.11.7"